--- a/css/main.css
+++ b/css/main.css
@@ -61,12 +61,6 @@ footer {
 section {
   height: 100vh; }
 
-.section__title {
-  font-family: "Gagalin", Arial, Helvetica, sans-serif;
-  color: #f9b43b;
-  font-size: 72px;
-  font-weight: 400; }
-
 @font-face {
   font-family: 'Gagalin';
   src: url("../fonts/gagalin-regular-webfont.woff2") format("woff2"), url("../fonts/gagalin-regular-webfont.woff") format("woff");
@@ -108,6 +102,12 @@ section {
 
 .top__container {
   padding: 13px 80px 0 76px; }
+
+.top__title {
+  color: #f9b43b;
+  font-family: "Gagalin", Arial, Helvetica, sans-serif;
+  font-size: 72px;
+  font-weight: 400; }
 
 .header {
   display: -webkit-box;
@@ -230,5 +230,213 @@ section {
   position: absolute;
   bottom: 41px;
   left: 48.65%; }
+
+.best {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: url("../../img/bg-best.jpg") center center/cover no-repeat; }
+
+.best__container {
+  padding: 110px 91px 0 91px; }
+
+.best__title {
+  color: #2f3234;
+  font-family: "Gagalin", Arial, Helvetica, sans-serif;
+  font-size: 72px;
+  font-weight: 400;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  padding-bottom: 30px; }
+
+.best__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.best__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -ms-flex-preferred-size: 31.1%;
+  flex-basis: 31.1%; }
+
+.best__icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  padding-bottom: 30px; }
+
+.best__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
+.best__content__title {
+  text-align: center;
+  color: #2f3234;
+  font-family: "Lifehack", Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  font-weight: 500;
+  letter-spacing: -0.6px;
+  padding-bottom: 16px; }
+
+.best__content__text {
+  text-align: center;
+  opacity: 0.8;
+  color: #2f3234;
+  font-family: "Ubuntu", Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: 300; }
+
+.team {
+  background: url("../../img/bg-team.jpg") center center/cover no-repeat; }
+
+.team__container {
+  height: 100%;
+  width: 50%;
+  margin-left: auto;
+  background-color: #2f3234;
+  opacity: 0.93;
+  padding: 113px 102px 0 102px; }
+
+.team__title {
+  color: #f9b43b;
+  font-family: "Gagalin", Arial, Helvetica, sans-serif;
+  font-size: 72px;
+  font-weight: 400; }
+
+.team__name {
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: "Gagalin", Arial, Helvetica, sans-serif; }
+
+.team__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.team__text__title {
+  color: #ffffff;
+  font-family: "Ubuntu", Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: 700; }
+
+.team__text__desc {
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: 300;
+  font-family: "Ubuntu", Arial, Helvetica, sans-serif; }
+
+.comments {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: #000; }
+
+.comments__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  height: 100%;
+  width: 100%; }
+
+.comments__item {
+  width: 25%;
+  height: 50%; }
+
+.comments__item:nth-child(1) {
+  background: url("../../img/photo-1.jpg") center center/cover no-repeat; }
+
+.comments__item:nth-child(2) {
+  background: url("../../img/photo-2.jpg") center center/cover no-repeat; }
+
+.comments__item:nth-child(3) {
+  background: url("../../img/photo-3.jpg") center center/cover no-repeat; }
+
+.comments__item:nth-child(4) {
+  background: url("../../img/photo-4.jpg") center center/cover no-repeat; }
+
+.comments__item:nth-child(5) {
+  background: url("../../img/photo-5.jpg") center center/cover no-repeat; }
+
+.comments__item:nth-child(6) {
+  background: url("../../img/photo-6.jpg") center center/cover no-repeat; }
+
+.comments__item:nth-child(7) {
+  background: url("../../img/photo-7.jpg") center center/cover no-repeat; }
+
+.comments__item:nth-child(8) {
+  background: url("../../img/photo-8.jpg") center center/cover no-repeat; }
+
+.comments__content {
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  padding: 46px 33px 0 20px;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s; }
+  .comments__content:hover {
+    opacity: 1;
+    background: rgba(0, 0, 0, 0.7); }
+
+.comments__title {
+  color: #ffffff;
+  font-family: "Gagalin", Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  padding-bottom: 19px; }
+
+.comments__text {
+  color: #ffffff;
+  font-family: "Ubuntu", Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 24px;
+  padding-bottom: 11px; }
+
+.comments__button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  color: #ffffff;
+  font-family: "Ubuntu", Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  text-transform: uppercase;
+  padding: 9px 15px;
+  background: #2f3234;
+  border-radius: 5px; }
 
 /*# sourceMappingURL=main.css.map */
