--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,3 +10,6 @@
 @import "./section/team.scss";
 @import "./section/menu.scss";
 @import "./section/forms.scss";
+@import "./section/fix.scss";
+@import "./section/comments.scss";
+
