--- a/scss/config/base.scss
+++ b/scss/config/base.scss
@@ -3,14 +3,26 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 16px;
+
+  @include tablets {
+    font-size: 14px;
+  }
+  
+  @include phones {
+    font-size: 13px;
+  }
+}
+
 html, body {
   height: 100%;
+
 }
 
 body {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
-  font-size: 16px;
   line-height: 1.42;
   position: relative;
 }
@@ -18,13 +30,13 @@ body {
 .wrapper {
   position: relative;
   width: 100%;
-  min-width: 1100px;
-  min-height: 100%;
   overflow: hidden;
+  min-height: 100%;
 }
 
 .container {
-  width: 1100px;
+  width: 100%;
+  max-width: 1100px;
   margin: 0 auto;
   position: relative;
   display: flex;
