--- a/scss/section/best.scss
+++ b/scss/section/best.scss
@@ -4,17 +4,17 @@
 }
 
 .best__container {
-  padding: 110px 91px 0 91px;
+  padding: rem(110px) rem(91px) 0 rem(91px);
 }
 
 .best__title {
   color: #2f3234;
   @include gagalin;
-  font-size: 72px;
+  font-size: rem(72px);
   font-weight: 400;
   display: flex;
   justify-content: center;
-  padding-bottom: 30px;
+  padding-bottom: rem(30px);
 }
 
 .best__list {
@@ -33,7 +33,7 @@
 .best__icon {
   display: flex;
   justify-content: center;
-  padding-bottom: 30px;
+  padding-bottom: rem(30px);
 }
 
 .best__content {
@@ -46,10 +46,10 @@
   text-align: center;
   color: #2f3234;
   @include lifehack;
-  font-size: 24px;
+  font-size: rem(24px);
   font-weight: 500;
   letter-spacing: -0.6px;
-  padding-bottom: 16px;
+  padding-bottom: rem(16px);
 }
 
 .best__content__text {
@@ -57,6 +57,6 @@
   opacity: 0.8;
   color: #2f3234;
   @include ubuntu;
-  font-size: 14px;
+  font-size: rem(14px);
   font-weight: 300;
 }
