--- a/scss/section/comments.scss
+++ b/scss/section/comments.scss
@@ -52,7 +52,7 @@
   width: 100%;
   height: 100%;
   opacity: 0;
-  padding: 46px 33px 0 20px;
+  padding: rem(46px) rem(33px) 0 rem(20px);
   transition: all .5s;
   &:hover {
     opacity: 1;
@@ -63,28 +63,28 @@
 .comments__title {
   color: #ffffff;
   @include gagalin;
-  font-size: 14px;
+  font-size: rem(14px);
   font-weight: 400;
-  padding-bottom: 19px;
+  padding-bottom: rem(19px);
 }
 
 .comments__text {
   color: #ffffff;
   @include ubuntu;
-  font-size: 14px;
+  font-size: rem(14px);
   font-weight: 300;
-  line-height: 24px;
-  padding-bottom: 11px;
+  line-height: rem(24px);
+  padding-bottom: rem(11px);
 }
 
 .comments__button {
   display: inline-flex;
   color: #ffffff;
   @include ubuntu;
-  font-size: 13px;
+  font-size: rem(13px);
   font-weight: 500;
   text-transform: uppercase;
-  padding: 9px 15px;
+  padding: rem(9px) rem(15px);
   background: #2f3234;
-  border-radius: 5px;
+  border-radius: rem(5px);
 }
