--- a/scss/section/top.scss
+++ b/scss/section/top.scss
@@ -3,14 +3,19 @@
 }
 
 .top__container {
-  padding: 13px 80px 0 76px;
+  padding: rem(13px) rem(80px) 0 rem(76px);
+  @include tablets {
+    padding: 13px 0 0 0;
+    width: 95%;
+  }
 }
 
 .top__title {
   color: #f9b43b;
   @include gagalin;
-  font-size: 72px;
+  font-size: rem(72px);
   font-weight: 400;
+  width: 100%;
 }
 
 .header {
@@ -20,11 +25,27 @@
   justify-content: space-between;
 }
 
+.header__logo {
+  width: auto;
+}
+
+.header__logo__img {
+  width: auto;
+  height: 100%;
+}
+
 .header__nav {
   display: flex;
   margin-left: auto;
-  padding-bottom: 16px;
-  padding-right: 14px;
+  padding-bottom: rem(16px);
+  padding-right: rem(14px);
+  @include tablets {
+    display: none;
+  }
+
+  @include phones {
+    display: none;
+  }
 }
 
 .header__nav__list {
@@ -38,11 +59,11 @@
   &:after {
     content: "";
     display: block;
-    width: 4px;
-    height: 4px;
+    width: rem(4px);
+    height: rem(4px);
     border-radius: 50%;
     background: #fff;
-    margin: 0 16px;
+    margin: 0 rem(16px);
   }
   &:last-child:after {
     display: none;
@@ -52,7 +73,7 @@
 .header__nav__link {
   color: #ffffff;
   @include ubuntu;
-  font-size: 13px;
+  font-size: rem(13px);
   font-weight: 500;
   text-transform: uppercase;
   display: flex;
@@ -62,27 +83,52 @@
 .header__button {
   color: #ffffff;
   @include ubuntu;
-  font-size: 13px;
+  font-size: rem(13px);
   font-weight: 500;
   text-transform: uppercase;
-  padding: 8px 15px;
+  padding: rem(8px) rem(15px);
   background-color: #e45028;
   border-radius: 5px;
   display: block;
-  margin-bottom: 16px;
+  margin-bottom: rem(16px);
+  @include tablets {
+    margin-bottom: 0;
+    margin-right: 30px;
+    margin-left: auto;
+  }
+}
+
+.header__hamburger {
+  display: none;
+  @include tablets {
+    display: flex;
+    flex-direction: column;
+  }
+  @include phones {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.header__hamburger__nav {
+  width: 24px;
+  height: 4px;
+  border-radius: 4px;
+  background: white;
+  margin-bottom: 5px;
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .top__contain {
-  align-items: center;
   flex: .7;
-  display: flex;
   width: 100%;
   height: 100%;
-
-}
-
-.top__pic__img {
-  max-width: 100%;
+  display: flex;
+  @include tablets {
+    flex: 1;
+  }
 }
 
 .top__content {
@@ -90,33 +136,58 @@
   align-items: center;
   height: 100%;
   width: 100%;
+  @include tablets {
+    flex-direction: column;
+    padding-top: 52px;
+  }
 }
 
 .top__pic {
   width: 50%;
   display: flex;
   justify-content: flex-end;
+  @include tablets {
+    width: auto;
+    justify-content: center;
+  }
+}
+
+.top__pic__img {
+  height: 100%;
+  width: auto;
 }
 
 .top__text {
   width: 50%;
-  padding-left: 12px;
-  padding-top: 64px;
+  padding-left: rem(12px);
+  padding-top: rem(24px);
+  @include tablets {
+    width: 100%;
+    text-align: center;
+    padding-left: 0;
+  }
 }
 
 .top__desc {
-  font-size: 65px;
+  width: 100%;
+  font-size: rem(65px);
   color: #ffffff;
   @include lifehack;
   font-weight: 500;
   letter-spacing: -1.63px;
-  line-height: 60px;
-  padding-top: 10px;
+  line-height: rem(60px);
+  padding-top: rem(10px);
+  @include tablets {
+    margin: 0 auto;
+    width: 50%;
+  }
 }
 
 .top__scroll {
   position: absolute;
-  bottom: 41px;
+  bottom: rem(41px);
   left: 48.65%;
 }
+
+
 
