--- a/scss/section/best.scss
+++ b/scss/section/best.scss
@@ -1,6 +1,6 @@
 .best {
   display: flex;
-  background: url("../../img/bg-best.jpg") center center / cover no-repeat;
+  background: url("../../image/bg-best.jpg") center center / cover no-repeat;
 }
 
 .best__container {
