--- a/scss/section/footer.scss
+++ b/scss/section/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   min-height: rem(60px);
-  background: url("../../img/footer.jpg") center center / cover no-repeat;
+  background: url("../../image/footer.jpg") center center / cover no-repeat;
   width: 100%;
 }
 
