--- a/scss/section/team.scss
+++ b/scss/section/team.scss
@@ -1,5 +1,5 @@
 .team {
-  background: url("../../img/bg-team.jpg") center center / cover no-repeat;
+  background: url("../../image/bg-team.jpg") center center / cover no-repeat;
 }
 
 .team__container {
