--- a/scss/section/top.scss
+++ b/scss/section/top.scss
@@ -1,5 +1,5 @@
 .top {
-  background: url('../../img/bg-top.jpg') center center / cover no-repeat;
+  background: url('../../image/bg-top.jpg') center center / cover no-repeat;
 }
 
 .top__container {
