--- a/scss/section/working.scss
+++ b/scss/section/working.scss
@@ -1,5 +1,5 @@
 .working {
-  background: url("../../img/bg-working.jpg") center center / cover no-repeat;
+  background: url("../../img/working.jpg") center center / cover no-repeat;
 }
 
 .working__title {
