--- a/scss/section/forms.scss
+++ b/scss/section/forms.scss
@@ -1,5 +1,5 @@
 .forms {
-  background: url("../../image/bg-forms.jpg") center center / cover no-repeat;
+  background: url("../../image/forms.jpg") center center / cover no-repeat;
 }
 
 .forms__container {
